responsive.css
/*!
 * Start Bootstrap - Scrolling Nav HTML Template (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

body {
    width: 100%;
    height: 100%;
    font-family: 'Open Sans', sans-serif;
}

html {
    width: 100%;
    height: 100%;
    font-family: 'Open Sans', sans-serif;
}

.navbar-nav {
    float:right;
    font-weight: 700;
}
.navbar-default {
    background-color: #fff;
    border-bottom: 1pt solid rgba(0, 0, 0, .3);
    -webkit-background-clip: padding-box; /* for Safari */
    background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
}
.navbar-brand {
    padding: 5px;
}

#navbar_logo {
    height:40px;
}

@media(min-width:767px) {
    .navbar {
        padding: 0;
        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
        transition: background .5s ease-in-out,padding .5s ease-in-out;
    }
    .navbar-nav {
        display:none;
    }

    .top-nav-collapse {
        padding: 0;
    }
}

#interaction_container {
    width: 100%
}

#map {
    position: relative;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    border-bottom: 1px solid #808080;
}

#sponsors {
    background-color: #fbb038;
    color: white;
    text-align: center;
}
#entry_container {
    padding-right:0;
    padding-left:0;
    padding-bottom:20px;
}
#interaction_container {
    background-color: #fafafa;
}

.business_entry:first-child {
    border-top: 1px solid #e2e2e2;
}

.tour_entry:first-child {
    border-top: 1px solid #e2e2e2;
}

.intro-section {
    padding-top: 50px;
    text-align: center;
    background: #fff;
}
@media (max-width:1500px){

}

@media (max-width:800px) {
    #map {
        height: 300px;
    }
}



@media (min-width:800px){
    #map {
        top:50px;
        position:fixed;
        left:0;
        bottom:110px;
        right:450px;
    }

    #sponsors {
        position: fixed;
        left:0;
        bottom:0;
        height:110px;
        right:450px;
        /*top:550px;*/
    }

    #interaction_container {
        width:450px;
        position:fixed;
        top:50px;
        right:0;
        bottom:0;
        float:right;
        border-left: 1px solid #b4b4b4;
    }

    #entry_container {
        overflow: scroll;
        overflow-x: hidden;
        bottom:0;
        top:190px;
        width:450px;
        right:0;
        position:fixed;
        padding-left: 20px;
        padding-right: 10px;
    }

    .business_entry:first-child {
        border-top-left-radius: 3px;
        border-top-right-radius: 3px;
    }
    .tour_entry:first-child {
        border-top-left-radius: 3px;
        border-top-right-radius: 3px;
    }
}
.leaflet-popup-content {
    padding: 4px;
    font-weight: 500;
}

.business_entry {
    color: #777;
    background-color: white;
    text-align: left;
    padding-left:10px;
    width: 100%;
    padding-top: 7px;
    padding-bottom: 7px;
    border-bottom: 1px solid #e2e2e2;
    border-left: 1px solid #e2e2e2;
    border-right: 1px solid #e2e2e2;
    cursor: pointer;
}

.business_entry:hover {
    background-color: #f7f7f7;
    border-left: 4px solid #767676;
}

.business_entry_active, .business_entry_active:hover {
    background-color: #f9f9f9;
    border-left: 8px solid #767676;
}

.tour_entry {
    color: #777;
    background-color: white;
    text-align: left;
    padding-left:10px;
    width: 100%;
    padding-top: 5px;
    padding-bottom: 5px;
    cursor: pointer;
    border-bottom: 1px solid #ccc;
    border-right: 1px solid #e2e2e2;
    border-left-style: solid;
    border-left-width: 2px;
}
.tour_entry:hover {
    background-color: #f7f7f7;
    border-left-width: 4px;
}

.tour_entry_active, .tour_entry_active:hover {
    background-color: #f9f9f9;
    border-left-width: 8px;
}

.about-section {
    height: 100%;
    padding-top: 150px;
    text-align: center;
    background: #eee;
}

.services-section {
    height: 100%;
    padding-top: 150px;
    text-align: center;
    background: #fff;
}

.contact-section {
    height: 100%;
    padding-top: 150px;
    text-align: center;
    background: #eee;
}

.selection_container {
    width: 100%;
    margin: 0 auto;
    margin-top: 0px;
    height:140px;
    display: table;
}
.selection_container ul {
    padding: 0;
    border-bottom: 1px solid #fbb038;
    height:50px;
    background-color: white;
}


.selection_container li {
    color: #7c7c7c;
    width:50%;
    display: table-cell;
    float: left;
    height:50px;
    padding-top:12px;
    font-weight: bold;
    cursor: pointer;

}


.active_tab {
    border-bottom: 5px solid #fbb038;
}

.search_field {
    margin-top: 20px;
    width: 90%;
    margin-left:5px;
    margin-right: 10px;
    font-size: larger;
    font-family: 'Open Sans', sans-serif;
    padding: 8px;
    border: 1px solid #cecece;
    border-radius: 3px;
}

textarea:focus,
input[type="text"]:focus,
input[type="password"]:focus,
input[type="datetime"]:focus,
input[type="datetime-local"]:focus,
input[type="date"]:focus,
input[type="month"]:focus,
input[type="time"]:focus,
input[type="week"]:focus,
input[type="number"]:focus,
input[type="email"]:focus,
input[type="url"]:focus,
input[type="search"]:focus,
input[type="tel"]:focus,
input[type="color"]:focus,
.uneditable-input:focus {
    border: 1px solid #fbb038;
    box-shadow: 0;
    outline: 0 none;
}

.leaflet-bar a {
    width: 36px;
    height: 36px;
}
.leaflet-bar .leaflet-control-zoom-out {
    background-position: 5px -24px;
}
.leaflet-bar .leaflet-control-zoom-in {
    background-position: 5px 4px;
}

.business_detail {
    text-align: center;
    font-size: larger;
    font-family: 'Open Sans', sans-serif;
}
.business_detail a {
    padding: 5px;
    border-radius: 3px;
    border: 1px solid lightgray;
}

.basic_tour_popup a {
    padding: 5px;
    border-radius: 3px;
    border: 1px solid lightgray;
}

#sponsors img {
    margin: 20px 15px 15px;
}

.business_title {
    font-weight: 600;
}
#locate_map_element {
    width:96%;
    height:280px;
    margin: 20px auto;

}

.basic_business_popup {
    cursor: pointer;
    font-family: 'Open Sans', sans-serif;
}
.basic_business_popup:hover {
    color: #0078A8;
    text-decoration: underline;
}
.basic_tour_popup {
    cursor: pointer;
    line-height: 14px;
    font-family: 'Open Sans', sans-serif;
}
.basic_tour_popup .business_title:hover {
    color: #0078A8;
    text-decoration: underline;
}

.directions_link {

}

.tour_time {
    display: none;
    font-size: smaller;
    font-weight: 400;
}

.leaflet-container img.leaflet-marker-icon {
    /* fix for tap area below icon being excessive */
    clip: rect(auto auto 60px auto);
}

.popup_subdetails {
    display:none;
    font-size: smaller;
}
.popup_detail_button {
    display:inline-block;
    width:100px;
}

.overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,.5);
    z-index: 100000;
    display: none;
    -webkit-backface-visibility: hidden;
}

.directions-overlay {
    position: relative;
    z-index: 10001;
    display: none;
    max-width: 670px;
    margin: 0 auto;
    height: 100%;
    -webkit-backface-visibility: hidden;
}

.directions-view {
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    padding: 15px;
    position: absolute;
    background-color: #fff;
    min-height: 450px;
    overflow-x: hidden;
    overflow-y: auto;
    box-sizing: border-box;
    -moz-box-sizing: border-box;

}

#directions-map {
    width: 400px;
    height: 350px;

}

#directions-summary {
    float:right;
    width:218px;
    font-family: ‘Roboto Condense’, Arial, serif;
    font-size: 13px;
}

#directions-panel {
    width: 100%;
}

#directions-header {
    width: 100%;
    padding: 20px;
    background-color: #eee;
    border: 1px solid #c0c0c0;
    margin-top: 14px;
}

#directions-dropdown {
    position: absolute;
    right:0;
    top:-38px;
    height: 38px;
    background-color: rgba(0, 112, 60, 0.65);
    z-index: 10002;
    text-align: center;
    padding: 10px;
    cursor: pointer;
    border-bottom-left-radius: 8px;
    border-left: 1pt solid rgba(0, 0, 0, .3);
    border-bottom: 1pt solid rgba(0, 0, 0, .3);
    color: white;
    font-family: 'Open Sans', sans-serif;
    font-size: 14px;
}

#directions-dropdown:hover {
    text-decoration: underline;
}

#print-button {
    font-size: 16px;
    cursor: pointer;
    width: 100px;
    background-color: #00703c;
    border-radius: 4px;
    border: 1px solid gray;
    text-transform: uppercase;
    padding: 9px;
    text-align: center;
    color: white;
}

#print-close {
    position: absolute;
    top: 20px;
    right: 10px;
    cursor: pointer;
}


@media print {
    .intro-section {
        padding-top:0;
    }
    .leaflet-control{
        visibility: hidden;
    }
    #map {
        height: 400px;
        top:10px;
        position:relative;
    }
    #interaction_container {
        display: none;

    }
    a[href]:after {
        content: none;
    }

    .no-print, .no-print * {
        display: none !important;
    }

    .overlay {
        display: block;
        height: auto;
        position: relative;
    }

    .directions-overlay {
        display: block;
        height: auto;
        position: relative;
    }

    .directions-view {
        position: relative;
        height: auto;
        overflow: visible;
    }
    .gmnoprint, .gmnoscreen, .gm-style-cc {
        visibility: hidden!important;
    }
}

